# rendar

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/theme/: slides.css  style.css  template.html
src/: config.rs  csv_preview.rs  main.rs  render.rs  site.rs  slides.rs  template.rs
