[package]
name = "rendar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
walkdir = "2.5"
globset = "0.4"
axum = "0.7"
notify = "6.1"
tempfile = "3.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
